# 3debsd

./: .gitignore  3d_EBSD_analysis.ipynb  CITATION.cff  EDS_slice_animation.ipynb  LICENSE  README.md  __init__.py  algo_diagram.ipynb  depth_analysis.ipynb  ebsd3d.py  example.ipynb  grain_section.ipynb  height_maps.ipynb  main.py  mesh3d.py  plots3d.py  pyproject.toml  pyvista_test.py  requirements.txt  voronoi3d.py  vtk_test.py
docs/: 3debsd.html  index.html  search.js
documentation/: mesh_modification_library_plan.md
gui/: log_widget.py  main_window.py  mesh_tree_widget.py  plot_widget.py
mesh/: __init__.py  ebsd3d.py  mesh3d.py  mesh_modifier.py  option.py  primitives.py  voronoi3d.py
mesh/geometry/: plane.py
mesh/modification/: create.py  intersections.py  remove.py  selection.py
notebooks/: 3d_EBSD_analysis.ipynb  algo_diagram.ipynb  depth_analysis.ipynb  example.ipynb
src/: mesh.py
src/3debsd_grain_mesher.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_GB_calculation.py  test_intersections.py  test_mesh_creation.py  test_selection.py
tests/integration/: test_mesh_intersection.py
tests/unit/: test_create.py
tools/: material_phases.py  process_h5_data.py  process_h5_data_shift.py
