[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "3debsd-grain-mesher"
version = "0.1.0"
description = "Grain boundary reconstruction algorithm for 3D EBSD data"
readme = "README.md"
authors = [
    { name="Eric Viklund", email="eric.viklund@kek.jp" }
]
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/EricViklund-KEK/3debsd"
Documentation = "https://ericviklund-kek.github.io/3debsd/"